[package]
name = "bevy_rander_layers_manager"
version = "0.1.0"
edition = "2021"
authors = ["SET001 <settydark@gmail.com>"]
categories = ["game-development"]
description = "Manager for Bevy RenderLayers"
exclude = ["examples"]
keywords = ["bevy", "RenderLayers", "manager"]
readme = "README.md"
repository = "https://github.com/SET001/bevy_render_layers_manager"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.14", default-features = false, features=["bevy_render"]}
[dev-dependencies]
rstest = "0.22.0"
rstest_reuse = "0.7.0"
